--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "cmdk": "^1.0.0",
     "i": "^0.3.7",
     "lucide-react": "^0.373.0",
-    "next": "14.2.3",
+    "next": "^13.5.6",
     "primereact": "^10.6.5",
     "react": "^18",
     "react-dom": "^18",
