--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "cmdk": "^1.0.0",
     "i": "^0.3.7",
     "lucide-react": "^0.373.0",
-    "next": "^13.5.6",
+    "next": "^14.2.3",
     "primereact": "^10.6.5",
     "react": "^18",
     "react-dom": "^18",
@@ -60,6 +60,7 @@
     "postcss": "^8",
     "prisma": "^5.14.0",
     "tailwindcss": "^3.4.1",
+    "tsconfig-paths-webpack-plugin": "^4.1.0",
     "typescript": "^5"
   }
 }
