--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "dotenv": "^16.4.5",
+    "dotenv-expand": "^11.0.6",
     "i": "^0.3.7",
     "lucide-react": "^0.373.0",
     "next": "^13.5.6",
@@ -55,11 +57,12 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "autoprefixer": "^10.4.19",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
-    "postcss": "^8",
+    "postcss": "^8.4.39",
     "prisma": "^5.14.0",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^3.4.4",
     "tsconfig-paths-webpack-plugin": "^4.1.0",
     "typescript": "^5"
   }
