--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
+    "@nivo/line": "^0.87.0",
     "@prisma/client": "^5.14.0",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-avatar": "^1.0.4",
@@ -45,7 +46,7 @@
     "lucide-react": "^0.373.0",
     "next": "^13.5.6",
     "primereact": "^10.6.5",
-    "react": "^18",
+    "react": "^18.3.1",
     "react-dom": "^18",
     "react-hook-form": "^7.51.4",
     "react-loading": "^2.0.3",
