--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,8 @@
-NODE_ENV='development'
-NEXT_PUBLIC_URL="http://localhost:3000"
-NEXT_PUBLIC_API_URL="http://localhost:3000/api"
-NEXT_PUBLIC_NUMBER_VALIDATION=""
+NODE_ENV=development
 
-POSTGRES_PRISMA_URL="postgres://postgres:8s8rB8758TYxCqEBQGcTR2V7Kdw78SD7@localhost:6001/lemux_services_bd"
+NEXT_PUBLIC_UPLOAD_LOCAL=true
+NEXT_PUBLIC_URL=http://localhost:3000
+NEXT_PUBLIC_API_URL=http://localhost:3000/api
+NEXT_PUBLIC_NUMBER_VALIDATION=
+
+POSTGRES_PRISMA_URL=postgres://postgres:8s8rB8758TYxCqEBQGcTR2V7Kdw78SD7@localhost:6001/lemux_services_bd
