--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@
 /.next/
 /out/
 /dist/
+/public/files
 
 # production
 /build
@@ -27,6 +28,7 @@ yarn-debug.log*
 yarn-error.log*
 
 # local env files
+*.env
 .env*.local
 
 # vercel
