--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3'
 services:
   postgres:
     container_name: cefrio_postgres
-    image: postgres:12.16-bullseye
+    image: postgres:9.2.23-alpine
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_DB=cefrio_bd
