--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "primereact": "^10.6.5",
     "react": "^18.3.1",
     "react-dom": "^18",
+    "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.51.4",
     "react-loading": "^2.0.3",
     "tailwind-merge": "^2.3.0",
