--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3001",
     "build": "next build",
     "build:prod": "npm i && npm run prisma:generate && npm run migrate:deploy && npm run build",
-    "start": "next start",
+    "start": "next start -p 3001",
     "lint": "next lint",
     "migrate:dev": "npx prisma migrate dev",
     "migrate:dev:co": "npx prisma migrate dev --create-only",
