--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "next": "^13.5.6",
     "primereact": "^10.6.5",
     "react": "^18.3.1",
+    "react-day-picker": "^9.0.8",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.51.4",
