--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "postcss": "^8.4.39",
     "prisma": "^5.14.0",
     "tailwindcss": "^3.4.4",
+    "ts-node": "^10.9.2",
     "tsconfig-paths-webpack-plugin": "^4.1.0",
     "typescript": "^5"
   }
