FEAT: Generate PDF and Print

--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
     "migrate:dev": "npx prisma migrate dev",
     "migrate:dev:co": "npx prisma migrate dev --create-only",
     "migrate:deploy": "npx prisma migrate deploy",
+    "prisma:init": "npm run prisma:generate && npm run migrate:deploy && npm run prisma:seed",
+    "prisma:pull": "npx prisma db pull",
     "prisma:seed": "npx prisma db seed",
     "prisma:generate": "npx prisma generate"
   },
   "prisma": {
-    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seeds",
-    "seed-only": "ts-node --transpile-only prisma/seeds"
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
@@ -34,29 +35,39 @@
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
+    "@react-pdf/renderer": "^4.0.0",
     "@tanstack/react-query": "^5.35.1",
     "@tanstack/react-table": "^8.16.0",
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "currency-formatter": "^1.5.9",
     "dotenv": "^16.4.5",
     "dotenv-expand": "^11.0.6",
+    "handlebars": "^4.7.8",
+    "html2pdf.js": "^0.10.2",
     "i": "^0.3.7",
     "lucide-react": "^0.373.0",
-    "next": "^13.5.6",
+    "next": "^14.2.16",
+    "next-auth": "^4.24.10",
+    "nuqs": "^2.0.4",
     "primereact": "^10.6.5",
+    "print-js": "^1.6.0",
+    "puppeteer": "^23.6.1",
     "react": "^18.3.1",
     "react-day-picker": "^9.0.8",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.51.4",
     "react-loading": "^2.0.3",
+    "react-pdf-html": "^2.1.2",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/currency-formatter": "^1.5.4",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -65,6 +76,7 @@
     "eslint-config-next": "14.2.3",
     "postcss": "^8.4.39",
     "prisma": "^5.14.0",
+    "raw-loader": "^4.0.2",
     "tailwindcss": "^3.4.4",
     "ts-node": "^10.9.2",
     "tsconfig-paths-webpack-plugin": "^4.1.0",
