--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,11 @@
 {
   "compilerOptions": {
-    "lib": ["ES2023", "dom", "dom.iterable", "esnext"],
+    "lib": [
+      "ES2023",
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
     "target": "ES2022",
     "allowJs": true,
     "skipLibCheck": true,
@@ -20,7 +25,9 @@
     ],
     "baseUrl": "./",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": [
+        "./src/*"
+      ]
     }
   },
   "include": [
@@ -28,7 +35,11 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "dist/types/**/*.ts"
+    "dist/types/**/*.ts",
+    "prisma/seeds/index.ts",
+    "**/*.png"
   ],
-  "exclude": ["node_modules"]
+  "exclude": [
+    "node_modules"
+  ]
 }
