--- a/.env.example
+++ b/.env.example
@@ -5,4 +5,10 @@ NEXT_PUBLIC_URL=http://localhost:3000
 NEXT_PUBLIC_API_URL=http://localhost:3000/api
 NEXT_PUBLIC_NUMBER_VALIDATION=
 
-POSTGRES_PRISMA_URL=postgres://postgres:8s8rB8758TYxCqEBQGcTR2V7Kdw78SD7@localhost:6001/lemux_services_bd
+POSTGRES_PRISMA_URL=""
+
+VERCER_STORE_READ_WRITE_TOKEN=""
+
+# UPLOAD FILES
+UPLOAD_FILE_PROTOCOL=""
+UPLOAD_FILE_HOSTNAME=""
