--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "prisma:init": "npm run prisma:generate && npm run migrate:deploy && npm run prisma:seed",
     "prisma:pull": "npx prisma db pull",
     "prisma:seed": "npx prisma db seed",
+    "prisma:studio": "npx prisma studio",
     "prisma:generate": "npx prisma generate"
   },
   "prisma": {
@@ -38,13 +39,12 @@
     "@react-pdf/renderer": "^4.0.0",
     "@tanstack/react-query": "^5.35.1",
     "@tanstack/react-table": "^8.16.0",
+    "@vercel/blob": "^0.25.1",
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "currency-formatter": "^1.5.9",
-    "dotenv": "^16.4.5",
-    "dotenv-expand": "^11.0.6",
     "handlebars": "^4.7.8",
     "html2pdf.js": "^0.10.2",
     "i": "^0.3.7",
@@ -72,6 +72,8 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.19",
+    "dotenv": "^16.4.5",
+    "dotenv-expand": "^11.0.6",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8.4.39",
