--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "migrate:dev:co": "npx prisma migrate dev --create-only",
     "migrate:deploy": "npx prisma migrate deploy",
     "prisma:init": "npm run prisma:generate && npm run migrate:deploy && npm run prisma:seed",
-    "prisma:pull": "npx prisma db pull",
+    "prisma:push": "npx prisma db push",
     "prisma:seed": "npx prisma db seed",
     "prisma:studio": "npx prisma studio",
     "prisma:generate": "npx prisma generate"
