FEAt: Add Sentry and Config

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,6 @@ VERCER_STORE_READ_WRITE_TOKEN=""
 # UPLOAD FILES
 UPLOAD_FILE_PROTOCOL=""
 UPLOAD_FILE_HOSTNAME=""
+
+# SENTRY
+SENTRY_AUTH_TOKEN=""
