--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
     "@react-pdf/renderer": "^4.0.0",
+    "@sentry/nextjs": "^8.44.0",
     "@tanstack/react-query": "^5.35.1",
     "@tanstack/react-table": "^8.16.0",
     "@vercel/blob": "^0.25.1",
