FEAT:  Implementar autenticação

--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,7 @@ UPLOAD_FILE_HOSTNAME=""
 
 # SENTRY
 SENTRY_AUTH_TOKEN=""
+
+# NEXTAUTH
+NEXTAUTH_URL="http://localhost:3001"
+NEXTAUTH_SECRET="8s8rB8758TYxCqEBQGcTR2V7Kdw78SD7"
