--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "prisma:generate": "npx prisma generate"
   },
   "prisma": {
-    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed/index.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
@@ -49,6 +49,7 @@
     "handlebars": "^4.7.8",
     "html2pdf.js": "^0.10.2",
     "i": "^0.3.7",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.373.0",
     "next": "^14.2.16",
     "next-auth": "^4.24.10",
