--- a/package.json
+++ b/package.json
@@ -49,10 +49,12 @@
     "handlebars": "^4.7.8",
     "html2pdf.js": "^0.10.2",
     "i": "^0.3.7",
+    "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.373.0",
     "next": "^14.2.16",
     "next-auth": "^4.24.10",
+    "nextjs-toploader": "^3.7.15",
     "nuqs": "^2.0.4",
     "primereact": "^10.6.5",
     "print-js": "^1.6.0",
@@ -70,6 +72,7 @@
   },
   "devDependencies": {
     "@types/currency-formatter": "^1.5.4",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
