FIX: Invoices Route Create No overload matches this call

--- a/.env.example
+++ b/.env.example
@@ -14,7 +14,11 @@ UPLOAD_FILE_PROTOCOL=""
 UPLOAD_FILE_HOSTNAME=""
 
 # SENTRY
+SENTRY_ENABLE="false"
 SENTRY_AUTH_TOKEN=""
+SENTRY_ORGANIZATION=""
+SENTRY_PROJECT=""
+
 
 # NEXTAUTH
 NEXTAUTH_URL="http://localhost:3001"
