--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tabs": "^1.1.2",
     "@radix-ui/react-toast": "^1.1.5",
+    "@radix-ui/react-toggle": "^1.1.1",
     "@react-pdf/renderer": "^4.0.0",
     "@sentry/nextjs": "^8.44.0",
     "@tanstack/react-query": "^5.35.1",
