--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "react-resizable-panels": "^2.1.7",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "unidecode": "^1.1.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
