--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,7 @@ NEXT_PUBLIC_URL=http://localhost:3000
 NEXT_PUBLIC_API_URL=http://localhost:3000/api
 NEXT_PUBLIC_NUMBER_VALIDATION=
 
-POSTGRES_PRISMA_URL=""
+DATABASE_URL=""
 
 VERCER_STORE_READ_WRITE_TOKEN=""
 
