--- a/.env.example
+++ b/.env.example
@@ -23,3 +23,6 @@ SENTRY_PROJECT=""
 # NEXTAUTH
 NEXTAUTH_URL="http://localhost:3001"
 NEXTAUTH_SECRET="8s8rB8758TYxCqEBQGcTR2V7Kdw78SD7"
+
+# PUPPETEER
+PUPPETEER_CACHE_DIRECTORY=""
