--- a/package.json
+++ b/package.json
@@ -44,6 +44,22 @@
     "@sentry/nextjs": "^8.44.0",
     "@tanstack/react-query": "^5.35.1",
     "@tanstack/react-table": "^8.16.0",
+    "@tiptap/extension-bold": "^2.10.4",
+    "@tiptap/extension-bubble-menu": "^2.10.4",
+    "@tiptap/extension-bullet-list": "^2.10.4",
+    "@tiptap/extension-document": "^2.10.4",
+    "@tiptap/extension-history": "^2.10.4",
+    "@tiptap/extension-image": "^2.10.4",
+    "@tiptap/extension-italic": "^2.10.4",
+    "@tiptap/extension-list-item": "^2.10.4",
+    "@tiptap/extension-paragraph": "^2.10.4",
+    "@tiptap/extension-placeholder": "^2.10.4",
+    "@tiptap/extension-text": "^2.10.4",
+    "@tiptap/extension-text-align": "^2.10.4",
+    "@tiptap/extension-underline": "^2.10.4",
+    "@tiptap/pm": "^2.10.3",
+    "@tiptap/react": "^2.10.3",
+    "@tiptap/starter-kit": "^2.10.3",
     "@vercel/blob": "^0.25.1",
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
