--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@radix-ui/react-tabs": "^1.1.2",
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-toggle": "^1.1.1",
+    "@radix-ui/react-tooltip": "^1.1.6",
     "@react-pdf/renderer": "^4.0.0",
     "@sentry/nextjs": "^8.44.0",
     "@tanstack/react-query": "^5.35.1",
