--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "puppeteer:install": "npx puppeteer browsers install chrome",
     "build:prod": "npm i && npm run prisma:generate && npm run migrate:deploy && npm run build",
+    "build:prod:local": "npm run prisma:generate && npm run migrate:deploy && npm run build",
     "start": "next start -p 3001",
     "lint": "next lint",
     "format": "prettier ./src --write",
